Adicionado suporte para o Java 17